--- a/app/styles.scss
+++ b/app/styles.scss
@@ -10,6 +10,6 @@
 
 // Place any CSS rules you want to apply only on Android here
 .action-item {
-    padding-right: 10;
+    padding: 0 10;
     height: 100%;
 }
